--- a/src/Components/Map.css
+++ b/src/Components/Map.css
@@ -7,8 +7,12 @@
 }
 
 .google-map {
-  width: 100%;
-  height: 60vh;
+  margin: 0 auto;
+  max-width: 60%;
+  max-height: 50vh;
+  min-height: 20vh;
+  border: 2px solid grey;
+  margin-top: 3%;
 }
 
 .pin {
