--- a/src/Components/Map.css
+++ b/src/Components/Map.css
@@ -8,11 +8,14 @@
 
 .google-map {
   margin: 0 auto;
-  max-width: 60%;
+  width: 80%;
+  height: 50vh;
+  max-width: 1800px;
   max-height: 50vh;
-  min-height: 20vh;
+  min-height: 50vh;
   border: 2px solid grey;
-  margin-top: 3%;
+  margin-top: 2%;
+  margin-bottom: 1%;
 }
 
 .pin {
